# sat_solve

./: CMakeLists.txt  README.md
src/: brute.cpp  brute.h  cdcl.cpp  cdcl.h  file.cpp  file.h  implication.cpp  implication.h  main.cpp
test_data/: test.txt  test2.txt  test3.txt
